@@ -6814,6 +6814,25 @@ sub am_primary_prefixes
     return %valid;
 }
 
+# Directories installed during 'install-exec' phase.
+my %exec_dir_p =
+  (
+   'bin'	=> 1,
+   'sbin'	=> 1,
+   'libexec'	=> 1,
+   'data'	=> 0,
+   'sysconf'	=> 1,
+   'localstate'	=> 1,
+   'lib'	=> 1,
+   'info'	=> 0,
+   'man'	=> 0,
+   'include'	=> 0,
+   'oldinclude'	=> 0,
+   'pkgdata'	=> 0,
+   'pkglib'	=> 1,
+   'pkginclude'	=> 0
+  );
+
 # Handle `where_HOW' variable magic.  Does all lookups, generates
 # install code, and possibly generates code to define the primary
 # variable.  The first argument is the name of the .am file to munge,
@@ -7067,24 +7086,6 @@ sub am_install_var
 		next;
 	    }
 
-	    # Directories installed during 'install-exec' phase.
-	    my %exec_dir_p =
-	      (
-	       'bin'		=> 1,
-	       'sbin'		=> 1,
-	       'libexec'	=> 1,
-	       'data'		=> 0,
-	       'sysconf'	=> 1,
-	       'localstate'	=> 1,
-	       'lib'		=> 1,
-	       'info'		=> 0,
-	       'man'		=> 0,
-	       'include'	=> 0,
-	       'oldinclude'	=> 0,
-	       'pkgdata'	=> 0,
-	       'pkglib'		=> 1,
-	       'pkginclude'	=> 0
-	      );
 	    my $exec_p = (defined $exec_dir_p {$X}
 			  ? $exec_dir_p {$X}
 			  : ($X =~ /exec/));
