@@ -1,5 +1,10 @@
 2001-02-27  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (%exec_dir_p): Pulled out from...
+	(&am_primary_prefixes): here.
+
+2001-02-27  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&usage): Display $0, not $me.
 
 2001-02-27  Akim Demaille  <akim@epita.fr>
